@@ -6,7 +6,7 @@ use warnings;
 # Older versions cannot complete the test suite successfully
 use 5.018;
 
-our $VERSION = '2.001';
+our $VERSION = '2.002';
 # AUTHORITY
 
 =encoding utf8
@@ -23,6 +23,9 @@ Ryu - asynchronous stream building blocks
 
 Provides data flow processing for asynchronous coding purposes. It's a bit like L<ReactiveX|https://reactivex.io> in
 concept. Where possible, it tries to provide a similar API. It is not a directly-compatible implementation, however.
+
+For more information, start with L<Ryu::Source>. That's where most of the
+useful parts are.
 
 =head2 Why would I be using this?
 
@@ -234,6 +237,8 @@ syntax is "backwards" (same as grep/map chains in Perl)
 =item * L<Data::Monad>
 
 =item * L<Mojo::Rx> - Mojolicious-specific support for ReactiveX, follows the rxjs API quite closely
+
+=item * L<RxPerl> - same author as L<Mojo::Rx>, this (will eventually!) provide a ReactiveX API without being tied to Mojolicious
 
 =back
 
